objects/QwikScore_Scorecard__c.object
<CustomObject>
    <description>A record of question answers for a survey.</description>
    <fields>
        <fullName>Challenge_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Challenge Participant</label>
        <referenceTo>Challenge_Participant__c</referenceTo>
        <relationshipLabel>Scorecard</relationshipLabel>
        <relationshipName>Scorecard</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Questions__c</fullName>
        <description>How many questions have been completed for this scorecard</description>
        <inlineHelpText>How many questions have been completed for this scorecard</inlineHelpText>
        <label>Completed Questions</label>
        <summarizedField>QwikScore_Question_Answer__c.IsAnswered__c</summarizedField>
        <summaryForeignKey>QwikScore_Question_Answer__c.QwikScore_Scorecard__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Completion_Percent__c</fullName>
        <description>How far complete is this survey?</description>
        <formula>Completed_Questions__c /  Questions_in_Survey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How far complete is this survey?</inlineHelpText>
        <label>Completion Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Final_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What is the final score of this survey score card?</description>
        <inlineHelpText>What is the final score of this survey score card?</inlineHelpText>
        <label>Final Score</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Questions_in_Survey__c</fullName>
        <description>How many questions are there in this survey?</description>
        <formula>QwikScore_Survey__r.Questions_in_Survey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many questions are there in this survey?</inlineHelpText>
        <label>Questions in Survey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QwikScore_Survey__c</fullName>
        <description>Which survey is this scorecard related to?</description>
        <inlineHelpText>Which survey is this scorecard related to?</inlineHelpText>
        <label>Survey</label>
        <referenceTo>QwikScore__c</referenceTo>
        <relationshipLabel>Scorecards</relationshipLabel>
        <relationshipName>QwikScore_Scorecard</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Scored__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the survey been scored and locked?</description>
        <inlineHelpText>Has the survey been scored and locked?</inlineHelpText>
        <label>Scored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Raw_Score__c</fullName>
        <description>The total raw score of all related questions.</description>
        <inlineHelpText>The total raw score of all related questions.</inlineHelpText>
        <label>Total Raw Score</label>
        <summarizedField>QwikScore_Question_Answer__c.Answer_Value__c</summarizedField>
        <summaryFilterItems>
            <field>QwikScore_Question_Answer__c.IsAnswered__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>QwikScore_Question_Answer__c.QwikScore_Scorecard__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <formula>Challenge_Participant__r.Member__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <label>Scorecard</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QSS-{000000}</displayFormat>
        <label>Scorecard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecard</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>all_questions_answered_before_scoreing</fullName>
        <active>true</active>
        <description>All questions must be answered before a scorecard can be scored.</description>
        <errorConditionFormula>AND(Completed_Questions__c &lt; Questions_in_Survey__c,  Scored__c = true)</errorConditionFormula>
        <errorMessage>All questions must be answered before a scorecard can be scored.</errorMessage>
    </validationRules>
</CustomObject>